z-index issue
primary header  9990
modal 9991

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -8171,6 +8171,9 @@ button.btn.btn-filter {
 .addManageGroupAcc{
   overflow-y: hidden !important;
 }
+.modal{
+  z-index:9991;
+}
 /* responsive */
 
 @media (max-width: 1440px) {
